<resources>
    <string name="app_name">CourtCounter</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_4_points">+4 POINTS</string>
    <string name="_3_points">+3 POINTS</string>
    <string name="_2_points">+2 points</string>
    <string name="_1_point">+1 Point</string>
    <string name="team_b">Team B</string>
    <string name="_2_points2">+2 POINTS</string>
    <string name="_1_point2">+1 POINT</string>
    <string name="reset">reset</string>
</resources>
